# GenTS

./: .asv-machine.json  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  PrototypingTS.ipynb  README.md  asv.conf.json  environment.yml  pyproject.toml  requirements.txt  template_notebook.ipynb  timeseries_generation.py  ts_config.py
.github/workflows/: release.yml  tests.yml
benchmarks/: benchmarks.py
docs/: api.rst  conf.py  dev.rst  index.rst  install.rst  tests.rst  user.rst
gents/: __init__.py  cli.py  data.py  datastore.py  gents.py  hfcollection.py  meta.py  mhfdataset.py  read.py  timeseries.py  ts_gen.py  utils.py
gents/configs/: config.py  gents_cesm3.py  gents_default.py  gents_e3sm.py
gents/tests/: test_case_files.py  test_cases.py  test_cli.py  test_dask.py  test_hfcollection.py  test_meta.py  test_mhfdataset.py  test_parallel.py  test_tscollection.py  test_utils.py  test_workflow.py
src/gents/: genTS.py
utils/: gents  template_notebook.ipynb
