[build-system]
requires = ["hatchling", "numpy", "dask", "netCDF4", "cftime"]
build-backend = "hatchling.build"

[project]
name = "gents"
version = "0.9"
authors = [
  { name="Cameron Cummins", email="cameron.cummins@utexas.edu" },
]
description = "A useful tool for post-processing CESM2 history files into the timeseries format."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AgentOxygen/timeseries_generation"
Issues = "https://github.com/AgentOxygen/timeseries_generation/issues"