[build-system]
requires = ["setuptools", "setuptools-scm", "numpy", "dask", "netCDF4", "cftime"]
build-backend = "setuptools.build_meta"

[project]
name = "GenTS"
version = "0.1.1"
authors = [
  { name="Cameron Cummins", email="cameron.cummins@utexas.edu" },
]
description = "A useful tool for post-processing CESM2 history files into the timeseries format."
readme = "README.md"
requires-python = ">=3.10.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AgentOxygen/GenTS"
Issues = "https://github.com/AgentOxygen/GenTS"

[tool.setuptools]
packages = ["gents"]